--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ body::before {
   width: 100%;
   height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)),
-    url(/my-portfolio/public/images/nc_portfolio-bg.jpg);
+    url(./public/images/nc_portfolio-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   z-index: -1;
@@ -412,44 +412,6 @@ section.slide-out {
     transform: translateY(0);
     opacity: 1; /* Fade in to full opacity */
   }
-}
-
-/* **************************************
-   GLOBAL STYLES
-  ***************************************/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  color: rgba(189, 187, 165, 1);
-  font-family: "Martel Sans", sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Dorsa", sans-serif;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)),
-    url(/public/images/nc_portfolio-bg.jpg);
-  background-size: cover;
-  background-attachment: fixed;
-  z-index: -1;
 }
 
 /* **************************************
