--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(images/nc_portfolio-bg.jpg);
+  background-image: url(https://n4ika.github.io/my-portfolio/images/nc_portfolio-bg.jpg);
   background-size: cover;
-  background-attachment: fixed;
   z-index: -1;
 }
